Update all dependencies (#68)
Update all dependencies
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>